syntax = "proto3";

option csharp_namespace = "Analytics.API";

import "google/protobuf/timestamp.proto";

service Analytics {
  rpc AddUserEvent (UserEventRequest) returns (AddUserEventResponse);
  rpc GetTopTracks (GetTopTracksRequest) returns (GetTopTracksResponse);
  rpc GetTopArtists (GetTopArtistsRequest) returns (GetTopArtistsResponse);
}

message UserEventRequest {
  int32 user_id = 1;
  int32 track_id = 2; // optional for search
  EventType event_type = 3;
  ContextType context_type = 4;
  int32 context_id = 5; // playlist/album id when available
  int64 position_ms = 6;
  int64 duration_ms = 7;
  google.protobuf.Timestamp timestamp = 8;
  string payload = 9;
}

message AddUserEventResponse {
  bool success = 1;
}

enum EventType {
  EVENT_UNKNOWN = 0;
  PLAY_START = 1;
  PLAY_FINISH = 2;
  SKIP = 3;
  LIKE = 4;
  ADD_TO_PLAYLIST = 5;
  SEARCH = 6;
}

enum ContextType {
  CONTEXT_UNKNOWN = 0;
  CONTEXT_TRACK = 1;
  CONTEXT_PLAYLIST = 2;
  CONTEXT_ALBUM = 3;
  CONTEXT_RADIO = 4;
  CONTEXT_SEARCH = 5;
}

message GetTopTracksRequest {
  int32 user_id = 1;
  int32 limit = 2;
}

message TopTrack {
  int32 track_id = 1;
  int64 play_count = 2;
}

message GetTopTracksResponse {
  repeated TopTrack tracks = 1;
}

message GetTopArtistsRequest {
  int32 user_id = 1;
  int32 limit = 2;
}

message TopArtist {
  int32 artist_id = 1;
  int64 play_count = 2;
}

message GetTopArtistsResponse {
  repeated TopArtist artists = 1;
}

